@@ -1,3 +1,8 @@
+2009-10-16  Jackson Harper  <jackson@ximian.com>
+
+	* VisualStudioLogProvider.Writer.cs: We can get null strings here
+	when there is a known failure that doesn't have a description.
+
 2009-03-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* TestMethodManager.cs: There might be more than one
