@@ -1,3 +1,8 @@
+2009-10-16  Jackson Harper  <jackson@ximian.com>
+
+	* UnitTestWebpageLog.cs: remove divide by zero crash when trying
+	to update progress
+
 2009-01-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* TestPage.xaml.g.cs: Delete this file, it's generated by make (and VS
